# automatic-octo-spoon

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: test-entity.yml
include/: FinazonInput.h  IDataAdapter.h  IOutputAdapter.h  IPriceInput.h  ITickerOutput.h  PriceAdapter.h  PriceInput.h  StandardTime.h  StockData.h  Symbol.h  Ticker.h  TickerAdapter.h  TickerData.h  TickerManager.h  TickerOutput.h  TickerQueue.h  TimeSeries.h  ZMQOutput.h
src/: FinazonInput.cpp  PriceAdapter.cpp  StandardTime.cpp  Symbol.cpp  Ticker.cpp  TickerAdapter.cpp  TickerData.cpp  TickerManager.cpp  TickerQueue.cpp  TimeSeries.cpp  ZMQOutput.cpp
test/: TestApplicationAdapters.cpp  TestStandardTime.cpp  TestSymbol.cpp  TestTicker.cpp  TestTickerData.cpp  TestTickerQueue.cpp  TestTimeSeries.cpp
